# GANGLION-OOB

./: .bandit-baseline.json  .gitignore  CHANGELOG.md  HOW_IT_WORKS.md  LAUNCH.md  README.md  RELEASE_NOTES_v1.1.1.md  SELF_HEALING.md  attack_replay.py  demo.py  deploy.sh  fire_attack.py  ganglion_cli.py  install_linux_mac.sh  install_windows.bat  pyproject.toml  requirements.txt  run.bat  run.sh  test_harness.py  vanguard_cli.py  verify.py
.github/workflows/: ci.yml
blue_team/: __init__.py  ganglion.py  requirements.txt  vanguard.py
blue_team/alert_correlator/: __init__.py  alert_correlator.py
blue_team/behavioral_engine/: __init__.py  behavioral_engine.py
blue_team/blast_radius/: __init__.py  blast_radius.py
blue_team/config_auditor/: __init__.py  config_auditor.py
blue_team/credential_monitor/: __init__.py  credential_monitor.py
common/: attack_navigator.py  audit_log.py  mitre_attack.py  safe_eval.py  sbom.py  secure_channel.py  stix_export.py
decision_engine/: __init__.py  decision_engine.py
guest_production_vm/: ganglion-sentry.service  requirements.txt  sentry_agent.py
host_control_plane/: alert_manager.py  containment.py  control_center.py  dashboard.html  failover_orchestrator.py  ganglion-control.service  geo_intel.py  hypervisor_api.py  hypervisor_config.json  libvirt_backend.py  requirements.txt
media/: demo.cast
scripts/: make_cast.py  real_failover_demo.py
self_healing/: __init__.py  healing_orchestrator.py  health_monitor.py  nervous_system.py  reflex_arc.py  runtime.py
tests/: fuzz_parsers.py  test_ganglion.py  test_upgrades.py
(+59 files in other folders)
